# VincentvanderBeek1

./: README.md  deepdive.ipynb  deepdive_sligro (1).ipynb  deepdive_sligro (2).ipynb  deepdive_sligro.ipynb  pyproject.toml
AI_server/: STT_EMOTION_pipeline.py  app.py  final_process.ipynb  sentiment_analysis_training.py  sentiment_analysis_training_server.py  terminal_outputs.txt
Bow_Checklist/: README.md
Intern/data/: alle_data_sligro.csv
Intern/notebooks/: deepdive_sligro (2).ipynb
Y3AB/: Self-Assessment Rubric - Y3AB 2024-25 ADS&AI (2).xlsx  Worklog - Y3AB ADSAI 2024-2025.xlsx
