[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Vincent <you@example.com>"]
readme = "README.md"
homepage = "https://github.com/VincentvanderBeek/VincentvanderBeek1"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
tensorflow = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
