[project]
name = "testing"
version = "0.1.0"
description = ""
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vincent", email = "you@example.com" }]

[project.urls]
homepage = "https://github.com/VincentvanderBeek/VincentvanderBeek1"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
tensorflow = "^2.12.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"